--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -34,7 +34,7 @@
 				</li>
 			</ul>
 			{{/if}}
-			{{!-- <ul class="navbar-nav ml-auto">
+			<ul class="navbar-nav ml-auto">
 				{{#if staff}}
 				<li class="nav-item dropdown">
 					<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"
@@ -56,7 +56,7 @@
 					<a href="/user/register" class="nav-link">Register</a>
 				</li>
 				{{/if}}
-			</ul> --}}
+			</ul>
 		</div>
 	</div>
 </nav>
