functioning database but cannot list movies

--- a/views/movie/addMovie.handlebars
+++ b/views/movie/addMovie.handlebars
@@ -1,4 +1,4 @@
-{{!-- <div class="container">
+<div class="container">
 	<div class="card card-body">
 		<h3>Add Video Jot</h3>
 		<form action="" method="post">
@@ -42,7 +42,7 @@
 								value="Tamil" onclick="ensureOneCheck('language', 'languageErr', 'btnSubmit')">
 							<label class="form-check-label" for="tamil">Tamil</label>
 						</div>
-						<p class="text-danger m-0" id="languageErr" style="display:none">Please select one language</p>
+						{{!-- <p class="text-danger m-0" id="languageErr" style="display:none">Please select one language</p> --}}
 					</div>
 				</div>
 			</div>
@@ -116,4 +116,4 @@
 		uiLibrary: 'bootstrap4',
 		value: moment().format('DD/MM/YYYY'),
 	});
-</script> --}}
+</script>
