--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -12,7 +12,10 @@
 					<a class="nav-link" href="/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/about">Movie List</a>
+					<a class="nav-link" href="/movie/addMovie">Movie List</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/movie/addMovie">Cinema List</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Promotion List</a>
@@ -24,17 +27,15 @@
 					<a class="nav-link" href="/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/about">Movies</a>
+					<a class="nav-link" href="/movie/listMovie">Movie List</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Buy tickets</a>
+					<a class="nav-link" href="/movie/addMovie">Add Movie</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Promotions</a>
-				</li>
+				
 			</ul>
 			{{/if}}
-			<ul class="navbar-nav ml-auto">
+			{{!-- <ul class="navbar-nav ml-auto">
 				{{#if staff}}
 				<li class="nav-item dropdown">
 					<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"
@@ -55,7 +56,7 @@
 				<li class="nav-item">
 					<a href="/user/register" class="nav-link">Register</a>
 				</li>
-				{{/if}}
+				{{/if}} --}}
 			</ul>
 		</div>
 	</div>
