--- a/views/video/editVideo.handlebars
+++ b/views/video/editVideo.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+{{!-- <div class="container">
 	<div class="card card-body">
 		<h3>Edit Video Jot</h3>
 		<form action="" method="post">
@@ -115,4 +115,4 @@
 		format: 'dd/mm/yyyy',
 		uiLibrary: 'bootstrap4'
 	});
-</script>
+</script> --}}
