--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -27,7 +27,7 @@
 					<a class="nav-link" href="/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/movie/listMovie">Movie List</a>
+					<a class="nav-link" href="/movie/listMovies">Movie List</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/movie/addMovie">Add Movie</a>
