--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -32,7 +32,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/movie/addMovie">Add Movie</a>
 				</li>
-				
+				<li class="nav-item">
+					<a class="nav-link" href="/ticket/seats">Seats</a>
+				</li>
 			</ul>
 			{{/if}}
 			{{!-- <ul class="navbar-nav ml-auto">
