edit and delete movie (empty gives error)

--- a/views/movie/addMovie.handlebars
+++ b/views/movie/addMovie.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="card card-body">
-		<h3>Add Video Jot</h3>
+		<h3>Add Movie</h3>
 		<form action="" method="post">
 			<div class="form-group">
 				{{!-- Practical 5 Exercise 2: Add a title input text here named 'title'--}}
