--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,11 @@
 </head>
 
 <body>
+	{{#if user}}
+	{{> _adminnavbar }}
+	{{else}}
 	{{> _navbar }}
+	{{/if}}
 	<div class="container">
 		{{> _flashmsg}}
 		{{{body}}}
