--- a/views/partials/_adminnavbar.handlebars
+++ b/views/partials/_adminnavbar.handlebars
@@ -30,10 +30,10 @@
 					<a class="nav-link" href="/movie/listMovies">Movie List</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/movie/addMovie">Add Movie</a>
+					<a class="nav-link" href="/movie/addMovie">admin</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/ticket/seats">Seats</a>
+					<a class="nav-link" href="/ticket/seats">admin</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/user/login">Login</a>
