--- a/views/admin/updateuser.handlebars
+++ b/views/admin/updateuser.handlebars
@@ -1,8 +1,8 @@
 <form class="form-horizontal" method="POST">
         <div class="form-group">
-            <label class="control-label col-sm-2" for="username">Username</label>
+            <label class="control-label col-sm-2" for="name">Username</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="username" name="username" placeholder="username" value={{user.name}} disabled>
+                <input type="text" class="form-control" id="name" name="name" placeholder="name" value={{user.name}}>
             </div>
         </div>
         <div class="form-group">
