--- a/views/partials/_adminnavbar.handlebars
+++ b/views/partials/_adminnavbar.handlebars
@@ -43,17 +43,8 @@
 				</li>
 			</ul>
 			{{/if}}
-			{{!-- <ul class="navbar-nav ml-auto">
-				{{#if staff}}
-				<li class="nav-item dropdown">
-					<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"
-						id="navbarDropdownMenuLink">Video
-						Jots</a>
-					<div class="dropdown-menu">
-						<a href="" class="dropdown-item">Videos</a>
-						<a href="/video/addVideo" class="dropdown-item">Add Video</a>
-					</div>
-				</li>
+			<ul class="navbar-nav ml-auto">
+				{{#if user}}
 				<li class="nav-item">
 					<a href="/user/logout" class="nav-link">Logout</a>
 				</li>
@@ -64,7 +55,7 @@
 				<li class="nav-item">
 					<a href="/user/register" class="nav-link">Register</a>
 				</li>
-				{{/if}} --}}
+				{{/if}}
 			</ul>
 		</div>
 	</div>
