--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -35,6 +35,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/ticket/seats">Seats</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/ticket/listTickets">Tickets</a>
+				</li>
 			</ul>
 			{{/if}}
 			{{!-- <ul class="navbar-nav ml-auto">
