--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -25,6 +25,9 @@
 					<a class="nav-link" href="/admin/userlist">User List</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="/ticket/listTickets">Ticket List</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="/ticket/seats">Seats</a>
 				</li>
 			</ul>
