--- a/views/ticket/listTickets.handlebars
+++ b/views/ticket/listTickets.handlebars
@@ -26,9 +26,9 @@
 							<a class="nav-link" href="/ticket/seats">Seats</a>
 						</p>
 						<p>
-							<a href="/ticket/deleteTicket/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
+							<a href="/ticket/deleteTicket/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm cancellation?">
 								<i class="far fa-trash-alt"></i>
-								Delete
+								Cancel Ticket
 							</a>
 						</p>
 					</div>
