Commit Promotion code

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -30,6 +30,12 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/ticket/seats">Seats</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/promos/listPromotions">Promotion List</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/promos/addPromotion">Add Promotions</a>
+				</li>
 			</ul>
 			{{else}}
 			<ul class="navbar-nav">
@@ -41,6 +47,9 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/ticket/seats">Seats</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/promos/listPromotions">Promotion List</a>
 				</li>
 			</ul>
 			{{/if}}
