--- a/views/partials/_adminnavbar.handlebars
+++ b/views/partials/_adminnavbar.handlebars
@@ -18,7 +18,7 @@
 					<a class="nav-link" href="/movie/addMovie">Cinema List</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Promotion List</a>
+					<a class="nav-link" href="/promos/listPromotions">Promotion List</a>
 				</li>
 			</ul>
 			{{else}}
