--- a/views/promos/listPromotions.handlebars
+++ b/views/promos/listPromotions.handlebars
@@ -12,7 +12,6 @@
 			</div>
 		</div>
 
-		{{#if admin}}
 		<div class="col-sm-12 col-md-12 col-lg-2">
 			<p>
 				<a href="/promos/editPromotion/{{id}}" class="card-link mb-2">
@@ -28,7 +27,9 @@
 				</a>
 			</p>
 		</div>
-		{{/if}}
+		<!-- {{#if admin}} -->
+		
+		<!--  {{/if}} -->
 		{{/each}}
 	</div>
 	<h3>No Promotion Available</h3>
