--- a/views/promos/addPromotion.handlebars
+++ b/views/promos/addPromotion.handlebars
@@ -12,7 +12,7 @@
 				<textarea class="form-control" id="description" name="description" rows="7" maxlength="5000"></textarea>
 			</div>
             <div class="form-group mb-4">
-				<label class="font-italic" for="story">Code</label>
+				<label class="font-italic" for="story">Code (Ensure code is unique)</label>
 				<input class="form-control" id="code" name="code" minlength="12" maxlength="12"/>
 			</div>
 			<br>
