--- a/views/movie/addMovie.handlebars
+++ b/views/movie/addMovie.handlebars
@@ -4,22 +4,22 @@
 		<form action="" method="post">
 			<div class="form-group">
 				{{!-- Practical 5 Exercise 2: Add a title input text here named 'title'--}}
-				<label class="font-italic" for="title">Title</label>
+				<label class="font-italic" for="title"><h5>Title</h5></label>
 				<input class="form-control" id="title" name="title" onblur="initialiseTitle()"/>
 			</div>
 			<div class="form-group mb-4">
-				<label class="font-italic" for="story">Story</label>
+				<label class="font-italic" for="story"><h5>Story</h5></label>
 				<textarea class="form-control" id="story" name="story" rows="7" maxlength="2000"></textarea>
 			</div>
 
 			<div class="form-group">
-				<div class="row mb-2">
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
-						<label class="font-italic">Date of release</label>
+				<div class="row mb-2 ">
+					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4 " >
+						<label class="font-italic"><h5>Date of release</h5></label>
 						<input id="datepicker" width="200" name="dateRelease" readonly />
 					</div>
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
-						<label class="font-italic">Language</label>
+					<div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
+						<label class="font-italic"><h5>Language</h5></label>
 						<br>
 						{{!-- Practical 5 Exercise 2: Language radio buttons here named 'language'--}}
 						<div class="form-check form-check-inline">
@@ -49,8 +49,8 @@
 
 			<div class="form-group">
 				<div class="row">
-					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
-						<label class="font-italic">Subtitles</label>
+					<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-2">
+						<label class="font-italic"><h5>Subtitles</h5></label>
 						<br>
 						<div class="form-check form-check-inline">
 							<input class="form-check-input" type="checkbox" name="subtitles" id="chinese"
@@ -72,8 +72,8 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
-						<label class="font-italic">Classification</label>
+					<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-1">
+						<label class="font-italic"><h5>Classification</h5></label>
 						<br>
 						<div class="form-check form-check-inline">
 							<input class="form-check-input" type="radio" id="G" value="G" name="classification" checked>
@@ -102,6 +102,14 @@
 					</div>
 				</div>
 
+			</div>
+			<div class="form-group">
+				<div class="row">
+					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4  " >
+						<label class="font-italic"><h5>Movie Duration:</h5></label> <br>
+						<input id="number" width="200" name="duration"/> minutes
+					</div>
+				</div>
 			</div>
 			<br>
 			<button id="btnSubmit" type="submit" class="btn btn-primary">Save
