--- a/views/movie/listMovies.handlebars
+++ b/views/movie/listMovies.handlebars
@@ -39,13 +39,13 @@
 							</div>
 							<div class="col-sm-12 col-md-12 col-lg-2">
 								<p>
-									<a href="/movie/editMovie/{{id}}" class="card-link mb-2">
+									<a href="/movie/editMovie/{{title}}" class="card-link mb-2">
 										<i class="fas fa-pencil-alt"></i>
 										Edit
 									</a>
 								</p>
 								<p>
-									<a href="/movie/deleteMovie/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
+									<a href="/movie/deleteMovie/{{title}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
 										<i class="far fa-trash-alt"></i>
 										Delete
 									</a>
