--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -10,7 +10,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
-			{{#if user}}
+			{{!-- {{#if user}}
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link" href="/">Home</a>
@@ -36,8 +36,8 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/promos/addPromotion">Add Promotions</a>
 				</li>
-			</ul>
-			{{else}}
+			</ul> --}}
+			{{!-- {{else}} --}}
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link" href="/">Home</a>
@@ -45,18 +45,8 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/movie/listMovies">Movie List</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/ticket/seats">Seats</a>
-				</li>
-				<li class="nav-item">
-<<<<<<< HEAD
-					<a class="nav-link" href="/ticket/listTickets">Tickets</a>
-=======
-					<a class="nav-link" href="/promos/listPromotions">Promotion List</a>
->>>>>>> df79e96b61dcbe4972c93c52c0001e59d3d99e51
-				</li>
 			</ul>
-			{{/if}}
+			{{!-- {{/if}} --}}
 			<ul class="navbar-nav ml-auto">
 				{{#if user}}
 				<li class="nav-item dropdown">
@@ -64,6 +54,7 @@
 						id="navbarDropdownMenuLink">{{user.name}}</a>
 						<div class="dropdown-menu">
 							<a href="" class="dropdown-item">Type : {{user.accounttype}}</a>
+							<a href="/user/profile" class="dropdown-item">Profile</a>
 						</div>
 				</li>
 				<li class="nav-item">
