--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -37,6 +37,9 @@
 					<a class="nav-link text-warning" href="/admin/userlist">User List</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link text-warning" href="/cinema/addCinema">Add Cinema</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link text-warning" href="/ticket/listTickets">Ticket List</a>
 				</li>
 				<li class="nav-item">
