--- a/views/movie/listMovies.handlebars
+++ b/views/movie/listMovies.handlebars
@@ -3,6 +3,7 @@
 		{{#if movie}}
 				<h3 class="text-primary">Movies Available</h3>
 				{{#each movie}}
+				{{#each language}}
 				<div class="card border-primary mb-2 w-100 mx-auto">
 					<div class="card-header">
 						<h5 class="card-title">{{title}}</h5>
@@ -124,6 +125,7 @@
 						</div>
 					</div>
 				</div>
+				{{/each}}
 				{{/each}}
 			</div>
 			{{else}}
