--- a/views/movie/addMovie.handlebars
+++ b/views/movie/addMovie.handlebars
@@ -8,29 +8,29 @@
 						{{!-- Practical 5 Exercise 2: Add a title input text here named 'title'--}}
 						<label class="font-italic" for="title"><h5>Title</h5></label>
 						<input class="form-control" id="title" name="title" onblur="initialiseTitle()"/>
+						<a href="#" onclick="getOMdbMovie()" tabindex="-1" class="card-link">
+						<i class="fas fa-film"></i> Get Open Movie DB Data
+						</a>
+						<span class="text-danger ml-2" id="OMdbErr" style="display:none">Unavailable</span>
 					</div>
+				
 					<div class="form-group mb-4">
 						<label class="font-italic" for="story"><h5>Story</h5></label>
 						<textarea class="form-control" id="story" name="story" rows="7" maxlength="2000"></textarea>
 					</div>
-					<div class="form-group">
-						<label class="font-italic" for="story">Starring</label>
-						<input class="form-control" id="starring" name="starring">
+					<div class="col-lg-3">
+						<img id="poster" src="/img/no-image.jpg" alt="Poster" class="border img-thumbnail img-fluid">
+						<input type="hidden" id="posterURL" name="posterURL">
 					</div>
 				</div>
-				<div class="col-lg-3">
-					<img id="poster" src="/img/no-image.jpg" alt="Poster" class="border img-thumbnail img-fluid">
-					<input type="hidden" id="posterURL" name="posterURL">
-				</div>
 			</div>
-
 					<div class="form-group">
-						<div class="row mb-2 ">
-							<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4 " >
+						<div class="row">
+							<div class="col-sm " >
 								<label class="font-italic"><h5>Date of release</h5></label>
 								<input id="datepicker" width="200" name="dateRelease" readonly />
 							</div>
-							<div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
+							<div class="col-sm">
 								<label class="font-italic"><h5>Language</h5></label>
 								<br>
 								{{!-- Practical 5 Exercise 2: Language radio buttons here named 'language'--}}
@@ -54,14 +54,9 @@
 										value="Tamil" onclick="ensureOneCheck('language', 'languageErr', 'btnSubmit')">
 									<label class="form-check-label" for="tamil">Tamil</label>
 								</div>
-								{{!-- <p class="text-danger m-0" id="languageErr" style="display:none">Please select one language</p> --}}
+								<p class="text-danger m-0" id="languageErr" style="display:none">Please select one language</p>
 							</div>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="row">
-							<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-2">
+							<div class="col-sm">
 								<label class="font-italic"><h5>Subtitles</h5></label>
 								<br>
 								<div class="form-check form-check-inline">
@@ -84,7 +79,39 @@
 								</div>
 							</div>
 
-							<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-1">
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div class="row">
+							{{!-- <div class="col-sm">
+								<label class="font-italic"><h5>Subtitles</h5></label>
+								<br>
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="checkbox" name="subtitles" id="chinese"
+										value="Chinese">
+									<label class="form-check-label" for="chinese">Chinese</label>
+								</div>
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="checkbox" name="subtitles" id="english"
+										value="English">
+									<label class="form-check-label" for="englishLang">English</label>
+								</div>
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="checkbox" name="subtitles" id="malay" value="Malay">
+									<label class="form-check-label" for="malay">Malay</label>
+								</div>
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="checkbox" name="subtitles" id="tamil" value="Tamil">
+									<label class="form-check-label" for="tamil">Tamil</label>
+								</div>
+							</div> --}}
+							<div class="form-group">
+								<label class="font-italic" for="story">Genre</label>
+								<input class="form-control" id="genre" name="genre" />
+							</div>
+
+							<div class="col-sm">
 								<label class="font-italic"><h5>Classification</h5></label>
 								<br>
 								<div class="form-check form-check-inline">
@@ -112,29 +139,12 @@
 									<label class="form-check-label" for="R21">R21</label>
 								</div>
 							</div>
+							<div class="col-sm" >
+								<label class="font-italic"><h5>Movie Duration:</h5></label> <br>
+								<input id="duration" width="200" name="duration"/> minutes
+							</div>
 							
 						</div>
-
-					</div>
-					<div class="form-group">
-						<div class="row">
-							<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-2">
-								{{#each cinema}}
-								<label class="font-italic"><h5>Cinema Available</h5></label>
-								<br>
-								<div class="form-check form-check-inline">
-									<input class="form-check-input" type="checkbox" name="branchCode" id="{{branchCode}}"
-										value="{{branchCode}}">
-									<label class="form-check-label" for="chinese">{{Branch}}</label>
-								</div>
-								{{/each}}
-							</div>
-							<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4  " >
-								<label class="font-italic"><h5>Movie Duration:</h5></label> <br>
-								<input id="number" width="200" name="duration"/> minutes
-							</div>
-						</div>
-					</div>
 						<br>
 						<button id="btnSubmit" type="submit" class="btn btn-primary">Save
 						</button>
