--- a/views/movie/listMovies.handlebars
+++ b/views/movie/listMovies.handlebars
@@ -1,53 +1,67 @@
 <div class="container">
-	{{#if admin}}
-		{{#if movie}}
-				<h3 class="text-primary">Movies Available</h3>
-				{{#each movie}}
-				{{#each language}}
-				<div class="card border-primary mb-2 w-100 mx-auto">
-					<div class="card-header">
-						<h5 class="card-title">{{title}}</h5>
-						{{story}}
+	{{#if user}}
+	{{#if movie}}
+	<div class="card card-body">
+		<h3 class="text-primary">Movies Available</h3>
+		{{#each movie}}
+		<div class="card border-primary mb-2 w-100 mx-auto">
+			<div class="card-header">
+				<h5 class="card-title">{{title}}</h5>
+				{{story}}
+			</div>
+			<div class="card-body">
+				<div class="row">
+					<div class="col-lg-2">
+						<a href="{{posterURL}}" data-title="{{title}}" data-toggle="lightbox">
+							<img src="{{posterURL}}" alt="Poster" class="img-thumbnail img-fluid mb-2"
+								onerror="this.src='/img/no-image.jpg'" style="max-height:160px">
+						</a>
 					</div>
-					<div class="card card-body">
-						<div class="row">
-							<div class="col-lg-2">
-								<a href="{{posterURL}}" data-title="{{title}}" data-toggle="lightbox">
-									<img src="{{posterURL}}" alt="Poster" class="img-thumbnail img-fluid mb-2" onerror="this.src='/img/no-image.jpg'" style="max-height:160px">
-									
-								</a>
-							</div>
-						
 					<div class="col-lg-8">
-						<div class="col-sm-12 col-md-12 col-lg-3">
-						<p class="font-italic">Language</p>
-						<p class="text-info">
-							{{replaceCommas language}}
-						</p>
-					</div>
-					</div>
-					<div class="col-sm-12 col-md-12 col-lg-2 col-lg-3">
-						<p class="font-italic">Classification</p>
-						<p class="text-info">{{classification}}</p>
-					</div>
-					<div class="col-sm-12 col-md-12 col-lg-2">
-						<p class="font-italic">Date of Release</p>
-						<p class="text-info">{{formatDate dateRelease 'DD MMM YYYY'}}</p>
-					</div>
-					<div class="col-sm-12 col-md-12 col-lg-2 col-lg-3">
-						<p>
-							<a class="nav-link" href="/ticket/seats">Seats</a>
-						</p>
-						<p>
-							<a href="/ticket/deleteTicket/{{selectedSeat}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
+						<div class="row">
+							<div class="col-sm-12 col-md-12 col-lg-3">
+								<p class="font-italic">Subtitles</p>
+								<p class="text-info">
+									{{replaceCommas subtitles}}
+								</p>
+							</div>
+							<div class="col-sm-12 col-md-12 col-lg-3">
+								<p class="font-italic">Language</p>
+								<p class="text-info">
+									{{replaceCommas language}}
+								</p>
+							</div>
+							<div class="col-sm-12 col-md-12 col-lg-3">
+								<p class="font-italic">Classification</p>
+								<p class="text-info">{{classification}}</p>
+							</div>
+							<div class="col-sm-12 col-md-12 col-lg-3">
+								<p class="font-italic">Date Release</p>
+								<p class="text-info">{{formatDate dateRelease 'DD MMM YYYY'}}</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-6">
+								<p class="font-italic">Genre</p>
+								<p class="text-info">{{genre}}</p>
+							</div>
+							<div class="col-lg-6">
+								<p class="font-italic">Duration</p>
+								<p class="text-info">{{duration}}</p>
+							</div>
 
+						</div>
+					</div>
+					<div class="col-lg-2">
+						<p>
 							<a href="/movie/editMovie/{{id}}" class="card-link mb-2">
 								<i class="fas fa-pencil-alt"></i>
 								Edit
 							</a>
 						</p>
 						<p>
-							<a href="/movie/deleteMovie/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
+							<a href="/movie/deleteMovie/{{id}}" class="card-link" data-toggle="confirmation"
+								data-title="Confirm delete?">
 								<i class="far fa-trash-alt"></i>
 								Delete
 							</a>
@@ -60,88 +74,40 @@
 				<div class="card-header" id="headingOne">
 					<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
 						aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
-						Cinemas <i class="fas fa-chevron-down"></i>
+						Story <i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
 				<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
-
 					<div class="card-body">
-						<div class="row">
-							<div class="col-sm-12 col-md-12 col-lg-3">
-								<p class="font-italic">Subtitles</p>
-								<p class="text-info">
-									{{replaceCommas subtitles}}
-								</p>
-							</div>
-							<div class="col-sm-12 col-md-12 col-lg-3">
-								<p class="font-italic">Language</p>
-								<p class="text-info">
-									{{language}}
-								</p>
-							</div>
-							<div class="col-sm-12 col-md-12 col-lg-3">
-								<p class="font-italic">Duration</p>
-								<p class="text-info">
-									{{duration}}
-								</p>
-							</div>
-							<div class="col-sm-12 col-md-12 col-lg-2">
-								<p class="font-italic">Classification</p>
-								<p class="text-info">{{classification}}</p>
-							</div>
-							<div class="col-sm-12 col-md-12 col-lg-2">
-								<p class="font-italic">Date of Release</p>
-								<p class="text-info">{{formatDate dateRelease 'DD MMM YYYY'}}</p>
-							</div>
-							<div class="col-sm-12 col-md-12 col-lg-2">
-								<p>
-									<a href="/movie/editMovie/{{title}}" class="card-link mb-2">
-										<i class="fas fa-pencil-alt"></i>
-										Edit
-									</a>
-								</p>
-								<p>
-									<a href="/movie/deleteMovie/{{title}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
-										<i class="far fa-trash-alt"></i>
-										Delete
-									</a>
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="accordion" id="storyAccordion">
-						<div class="card-header" id="headingOne">
-							<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
-								aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
-								Cinemas <i class="fas fa-chevron-down"></i>
-							</button>
-						</div>
-						<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
-							<div class="card-body">
-								{{#each Cinema}}
-								{{/each}}
-							</div>
-						</div>
+						
 					</div>
 				</div>
-				{{/each}}
-				{{/each}}
 			</div>
-			{{else}}
-			<h3>No Movies Available</h3>
-			{{/if}}
+		</div>
+		{{/each}}
+	</div>
 	{{else}}
-		{{#if movie}}
-			<div class="card card-body">
-				<h3 class="text-primary">Movies Available</h3>
-				{{#each movie}}
-				<div class="card border-primary mb-2 w-100 mx-auto">
-					<div class="card-header">
-						<h5 class="card-title">{{title}}</h5>
-						{{story}}
+	<h3>No movies available</h3>
+	{{/if}}
+	{{else}}
+	{{#if movie}}
+	<div class="card card-body">
+		<h3 class="text-primary">Movies Available</h3>
+		{{#each movie}}
+		<div class="card border-primary mb-2 w-100 mx-auto">
+			<div class="card-header">
+				<h5 class="card-title">{{title}}</h5>
+				{{story}}
+			</div>
+			<div class="card-body">
+				<div class="row">
+					<div class="col-lg-2">
+						<a href="{{posterURL}}" data-title="{{title}}" data-toggle="lightbox">
+							<img src="{{posterURL}}" alt="Poster" class="img-thumbnail img-fluid mb-2"
+								onerror="this.src='/img/no-image.jpg'" style="max-height:160px">
+						</a>
 					</div>
-					<div class="card-body">
+					<div class="col-lg-8">
 						<div class="row">
 							<div class="col-sm-12 col-md-12 col-lg-3">
 								<p class="font-italic">Subtitles</p>
@@ -152,67 +118,58 @@
 							<div class="col-sm-12 col-md-12 col-lg-3">
 								<p class="font-italic">Language</p>
 								<p class="text-info">
-									{{language}}
+									{{replaceCommas language}}
 								</p>
 							</div>
 							<div class="col-sm-12 col-md-12 col-lg-3">
-								<p class="font-italic">Duration</p>
-								<p class="text-info">
-									{{duration}}
-								</p>
-							</div>
-							<div class="col-sm-12 col-md-12 col-lg-2">
 								<p class="font-italic">Classification</p>
 								<p class="text-info">{{classification}}</p>
 							</div>
-							<div class="col-sm-12 col-md-12 col-lg-2">
-								<p class="font-italic">Date of Release</p>
+							<div class="col-sm-12 col-md-12 col-lg-3">
+								<p class="font-italic">Date Release</p>
 								<p class="text-info">{{formatDate dateRelease 'DD MMM YYYY'}}</p>
 							</div>
-							<div class="col-sm-12 col-md-12 col-lg-2">
-								<p>
-									<a href="/movie/editMovie/{{title}}" class="card-link mb-2">
-										<i class="fas fa-pencil-alt"></i>
-										Edit
-									</a>
-								</p>
-								<p>
-									<a href="/movie/deleteMovie/{{title}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?">
-										<i class="far fa-trash-alt"></i>
-										Delete
-									</a>
-								</p>
+						</div>
+						<div class="row">
+							<div class="col-lg-6">
+								<p class="font-italic">Genre</p>
+								<p class="text-info">{{genre}}</p>
 							</div>
+							<div class="col-lg-6">
+								<p class="font-italic">Duration</p>
+								<p class="text-info">{{duration}}</p>
+							</div>
+
 						</div>
 					</div>
+					
+				</div>
+			</div>
 
-					<div class="accordion" id="storyAccordion">
-						<div class="card-header" id="headingOne">
-							<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
-								aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
-								Cinema <i class="fas fa-chevron-down"></i>
-							</button>
-						</div>
-						<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
-							<div class="card-body">
-								{{language}}
-							</div>
-						</div>
+			<div class="accordion" id="storyAccordion">
+				<div class="card-header" id="headingOne">
+					<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
+						aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
+						Story <i class="fas fa-chevron-down"></i>
+					</button>
+				</div>
+				<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
+					<div class="card-body">
+						
 					</div>
 				</div>
-			{{/each}}
+			</div>
 		</div>
-		{{else}}
-		<h3>No Movies Available</h3>
-		{{/if}}		
+		{{/each}}
+	</div>
+	{{else}}
+	<h3>No movies available</h3>
+	{{/if}}
 	{{/if}}
 </div>
 
-{{#each cinema}}
-{{branchCode}}
-{{/each}}
 <script>
 	$('[data-toggle=confirmation]').confirmation({
 		rootSelector: '[data-toggle=confirmation]',
-	});
+});
 </script>
