--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -40,6 +40,9 @@
 					<a class="nav-link text-warning" href="/cinema/addCinema">Add Cinema</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link text-warning" href="/showing/addShowing">Add Showing</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link text-warning" href="/ticket/listTickets">Ticket List</a>
 				</li>
 				<li class="nav-item">
