--- a/views/user/profile/profile.handlebars
+++ b/views/user/profile/profile.handlebars
@@ -5,7 +5,7 @@
       <div class="col-lg-4">
         <div class="card shadow-sm">
           <div class="card-header bg-transparent text-center">
-            <img class="profile_img" width="240" height="240" src="../img/avatartemplate.png" alt="avatar">
+            <img class="profile_img" width="240" height="240" src="..//uploads/${{loggeduser.id}}/${{req.file.file-name}}" alt="avatar">
             <h3>{{loggeduser.name}}</h3>
           </div>
           <div class="card-body">
