--- a/views/movie/listMovies.handlebars
+++ b/views/movie/listMovies.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-	{{#if loggeduser}}
+	{{#if user}}
 	{{#if movie}}
 	<div class="card card-body">
 		<h3 class="text-primary">Movies Available</h3>
