--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -49,11 +49,10 @@
 					<a class="nav-link" href="/ticket/seats">Seats</a>
 				</li>
 				<li class="nav-item">
-<<<<<<< HEAD
-					<a class="nav-link" href="/ticket/listTickets">Tickets</a>
-=======
 					<a class="nav-link" href="/promos/listPromotions">Promotion List</a>
->>>>>>> df79e96b61dcbe4972c93c52c0001e59d3d99e51
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/ticket/payment">Payment</a>
 				</li>
 			</ul>
 			{{/if}}
