Added 'discount' input and display for promotions

--- a/views/promos/listPromotions.handlebars
+++ b/views/promos/listPromotions.handlebars
@@ -8,6 +8,7 @@
 				<h5 class="card-title">{{headline}}</h5>
 				<p>Description: {{description}}</p>
 				<br>
+				<p>Discount: {{discount}}</p>
 				<p>Code: {{code}}</p>
 			</div>
 		</div>
