--- a/views/promos/addPromotion.handlebars
+++ b/views/promos/addPromotion.handlebars
@@ -11,6 +11,10 @@
 				<label class="font-italic" for="story">Description</label>
 				<textarea class="form-control" id="description" name="description" rows="7" maxlength="5000"></textarea>
 			</div>
+			<div class="form-group">
+				<label class="font-italic" for="discount">Discount</label>
+				<input type="number" class="form-control" id="discount" name="discount" onblur="initialiseTitle()"/>
+			</div>
             <div class="form-group mb-4">
 				<label class="font-italic" for="story">Code (Ensure code is unique)</label>
 				<input class="form-control" id="code" name="code" minlength="12" maxlength="12"/>
