--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -54,6 +54,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/ticket/payment">Payment</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/ticket/listTicket">Ticket List</a>
+				</li>
 			</ul>
 			{{/if}}
 			<ul class="navbar-nav ml-auto">
