--- a/views/ticket/payment.handlebars
+++ b/views/ticket/payment.handlebars
@@ -3,33 +3,31 @@
 <body>
 
   <h2>Checkout Form</h2>
-  {{!-- Resize the browser window to see the effect. When the screen is less than 800px wide, make the two columns stack on
-    top of each other instead of next to each other. --}}
   <div class="row">
     <div class="col-75">
       <div class="container2">
-        <form action="/action_page.php">
+        <form method="post">
 
           <div class="row">
             <div class="col-50">
               <h3>Billing Address</h3>
               <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-              <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
+              <input type="text" id="fname" name="firstname" placeholder="John M. Doe" required>
               <label for="email"><i class="fa fa-envelope"></i> Email</label>
-              <input type="text" id="email" name="email" placeholder="john@example.com">
+              <input type="text" id="email" name="email" placeholder="john@example.com" required>
               <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-              <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
+              <input type="text" id="adr" name="address" placeholder="542 W. 15th Street" required>
               <label for="city"><i class="fa fa-institution"></i> City</label>
-              <input type="text" id="city" name="city" placeholder="New York">
+              <input type="text" id="city" name="city" placeholder="New York" required>
 
               <div class="row">
                 <div class="col-50">
                   <label for="state">State</label>
-                  <input type="text" id="state" name="state" placeholder="NY">
+                  <input type="text" id="state" name="state" placeholder="NY" required>
                 </div>
                 <div class="col-50">
                   <label for="zip">Zip</label>
-                  <input type="text" id="zip" name="zip" placeholder="10001">
+                  <input type="text" id="zip" name="zip" placeholder="10001" required>
                 </div>
               </div>
             </div>
@@ -44,27 +42,33 @@
                 <i class="fa fa-cc-discover" style="color:orange;"></i>
               </div>
               <label for="cname">Name on Card</label>
-              <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+              <input type="text" id="cname" name="cardname" placeholder="John More Doe" required>
               <label for="ccnum">Credit card number</label>
-              <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+              <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444" required>
               <label for="expmonth">Exp Month</label>
-              <input type="text" id="expmonth" name="expmonth" placeholder="September">
+              <input type="text" id="expmonth" name="expmonth" placeholder="September" required>
               <div class="row">
                 <div class="col-50">
                   <label for="expyear">Exp Year</label>
-                  <input type="text" id="expyear" name="expyear" placeholder="2018">
+                  <input type="text" id="expyear" name="expyear" placeholder="2018" required>
                 </div>
                 <div class="col-50">
                   <label for="cvv">CVV</label>
-                  <input type="text" id="cvv" name="cvv" placeholder="352">
+                  <input type="text" id="cvv" name="cvv" placeholder="352" required>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-50">
+                <div class="details">
+                  <label for="moviedetail">Details:</label>
+                  <label for="moviedate">Movie Date: {{ movieDate }}</label>
+                  <label for="moviedate">Movie Time: {{ movieTime }}</label>
                 </div>
               </div>
             </div>
 
           </div>
-          <label>
-            <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
-          </label>
           <input type="submit" value="Continue to checkout" class="btn">
         </form>
       </div>
@@ -123,7 +127,8 @@
 
   .col-25,
   .col-50,
-  .col-75 {
+  .col-75,
+  .details {
     padding: 0 16px;
   }
 
