--- a/views/movie/addMovie.handlebars
+++ b/views/movie/addMovie.handlebars
@@ -85,11 +85,11 @@
 			<div class="form-group">
 				<div class="row ">
 					<div class="col-4 " >
-						<label class="font-italic"><h5>Movie Duration:</h5></label> <br>
+						<label class="font-italic" for"duration"><h5>Movie Duration:</h5></label> <br>
 						<input class="form-control" id="duration" width="200" name="duration" placeholder="mins"/>
 					</div>
 					<div class="col-4">
-						<label class="font-italic" for="story"><h5>Genre</h5></label>
+						<label class="font-italic" for="genre"><h5>Genre</h5></label>
 						<input class="form-control" id="genre" name="genre" />
 					</div>
 
