--- a/views/layouts/usermain.handlebars
+++ b/views/layouts/usermain.handlebars
@@ -42,7 +42,7 @@
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="/css/style.css">
 
-	<title>VidJot - The Video Collection Jotter</title>
+	<title>Dragon Village</title>
 </head>
 
 <body>
