--- a/views/partials/_adminnavbar.handlebars
+++ b/views/partials/_adminnavbar.handlebars
@@ -52,7 +52,7 @@
 					<a class="nav-link" href="/admin/userlist">User List</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/ticket/listTickets">Ticket List</a>
+					<a class="nav-link" href="/ticket/listTicket">Ticket List</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/ticket/seats">Seats</a>
